# netrunner_cli

./: .gitattributes  .gitignore  ANIMATIONS.md  CHANGELOG.md  Cargo.toml  QUICK_REFERENCE.md  README.md  cliff.toml  demo_animations.sh  justfile  test_animations.sh
.cargo/: config.toml
.gitea/workflows/: ci.yml  deps-update.yml  release.yml  update-readme.yml
.github/workflows/: ci.yml  deps-update.yml  release.yml
examples/: README.md  basic_speed_test.rs  continuous_monitoring.rs  custom_configuration.rs  history_management.rs  json_output.rs  logo_demo.rs  statistics_dashboard.rs
examples/vhs/: README.md  debug-mode.tape  generate-tapes.sh  geolocation.tape  history.tape  json-output.tape  speed-test-history.tape  speed-test.tape  statistics-dashboard.tape
scripts/: bump_version.nu  bump_version.sh  check_publish.nu  migrate-to-gitea.sh  migrate_to_gitea.nu  release_prepare.nu  setup_gitea.nu  update_docs.nu  upgrade_deps.nu
scripts/tests/: run_all.nu
src/: main.rs
src/modules/: diagnostics.rs  history.rs  intro.rs  logo.rs  logo_README.md  mod.rs  speed_test.rs  stats_ui.rs  types.rs  ui.rs
tests/: binary_weight_tests.rs  geolocation_tests.rs  history_tests.rs  integration_tests.rs  speed_test_tests.rs  types_tests.rs
