[package]
name = "netrunner_cli"
version = "0.5.2"
edition = "2021"
authors = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
description = "A feature-rich Rust-based CLI to test and analyze your internet connection"
readme = "README.md"
homepage = "https://github.com/sorinirimies/netrunner_cli"
repository = "https://github.com/sorinirimies/netrunner_cli"
license = "MIT"
keywords = ["cli", "network", "internet", "speed-test", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
color-eyre = "0.6"
console = "0.15"
dialoguer = "0.10"
dirs = "5.0"
ratatui = "0.26"
crossterm = "0.27"
tachyonfx = "0.7"
rand = "0.8"
humantime = "2.1"
spinners = "4.1"
dns-lookup = "1.0"
sled = "0.34"
byte-unit = "4.0"
bincode = "1.3"
ctrlc = "3.2"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3"
async-trait = "0.1"
prettytable-rs = "0.10"
ratatui-widgets = "0.2.2"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
